--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
   </ul>
     
   </nav>
-  
-  <div class="box ">
+
+  <!-- Content -->
+  <div class="box content">
+
     <div class="text-center">
       <img class="shadow" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTkxMTA5OTAzMl5BMl5BanBnXkFtZTgwNjA5MDc3NjE@._V1_UX182_CR0,0,182,268_AL_.jpg">
       <p>Pulp Fiction</p>
     </div>
+
   </div>
 
   
