--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li><a href="#">Random</a></li>
     <li><a href="#" id="aboutBtn">About</a></li>
       <li>
-        <form onsubmit="alert(search(event))">
+        <form onsubmit="search(event)">
           <input id="filter" type="search" placeholder="Search"><i id="filtersubmit" class="fa fa-search" aria-hidden="true">
         </form>
   </i></li>
@@ -50,9 +50,9 @@
   </nav>
 
   <!-- Content -->
-  <div class="box content">
+  <div class="box" id="content">
 
-    <div class="text-center">
+    <div class="movie">
       <img class="shadow" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTkxMTA5OTAzMl5BMl5BanBnXkFtZTgwNjA5MDc3NjE@._V1_UX182_CR0,0,182,268_AL_.jpg">
       <p>Pulp Fiction</p>
     </div>
