--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
 
   <!-- Content -->
   <div class="box" id="content">
-    <div class="movie">
-      <!-- <img class="shadow" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTkxMTA5OTAzMl5BMl5BanBnXkFtZTgwNjA5MDc3NjE@._V1_UX182_CR0,0,182,268_AL_.jpg">
-      <p>Pulp Fiction</p> -->
-
-    </div>
+    <!-- <div class="movie">
+       <img class="shadow" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTkxMTA5OTAzMl5BMl5BanBnXkFtZTgwNjA5MDc3NjE@._V1_UX182_CR0,0,182,268_AL_.jpg">
+      <p>Pulp Fiction</p> 
+    </div>-->
 
   </div>
 
