--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="wrapper">
   
   <nav class="box">
-    <p>Movies</p>
+    <a class="brand" href="index.html">Movies</a>
     <ul>
       <li><a href="#">Random</a></li>
     <li><a href="#" id="aboutBtn">About</a></li>
