added placeholder poster img and added a feat. to show movies on first load

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li><a href="#">Random</a></li>
     <li><a href="#" id="aboutBtn">About</a></li>
       <li>
-        <form onsubmit="search(event)">
+        <form onsubmit="search(event, 'search')">
           <input id="filter" type="search" placeholder="Search"><i id="filtersubmit" class="fa fa-search" aria-hidden="true">
         </form>
   </i></li>
@@ -51,11 +51,8 @@
 
   <!-- Content -->
   <div class="box" id="content">
-    <div class="movie">
       <!-- <img class="shadow" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTkxMTA5OTAzMl5BMl5BanBnXkFtZTgwNjA5MDc3NjE@._V1_UX182_CR0,0,182,268_AL_.jpg">
       <p>Pulp Fiction</p> -->
-
-    </div>
 
   </div>
 
