--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
 
   <!-- Modal content -->
   <div class="modal-content">
+    <div class="modal-header">
     <span class="close">&times;</span>
-    <p>This tool uses the <a href="https://netflixroulette.net/api/" target="_blank">Netflix Roulette API</a>. </p>
+    <h2>About</h2>
+  </div>
+    <p>This site uses <a href="https://www.themoviedb.org/" target="_blank">The Movie DB</a>'s API to tell you what movie to watch. </p>
   </div>
 
 </div>
