added normalize css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Movies</title>
 
     <!-- CSS -->
+    <link href="normalize.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
 
@@ -35,7 +36,7 @@
 <body>
 <div class="wrapper">
   
-  <nav class="box">
+  <nav class="box nav">
     <a class="brand" href="index.html">Movies</a>
     <ul>
       <li><a href="#">Random</a></li>
@@ -53,7 +54,6 @@
   <div class="box" id="content">
 
   </div>
-
   
   <footer>
     <p class="text-center">2017</p>
@@ -70,7 +70,7 @@
     <span class="close">&times;</span>
     <h2>About</h2>
   </div>
-    <p>This site uses <a href="https://www.themoviedb.org/" target="_blank">The Movie DB</a>'s API to tell you what movie to watch. </p>
+    <p>This site uses <a href="https://www.themoviedb.org/" target="_blank">The Movie DB</a>'s API to help you choose what movie to watch. </p>
   </div>
 
 </div>
