--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <nav class="box nav">
     <a class="brand" href="index.html">Movies</a>
     <ul>
-      <li><a href="#">Random</a></li>
+      <li><a href="#" id="randomMovie">Random</a></li>
     <li><a href="#" id="aboutBtn">About</a></li>
       <li>
         <form onsubmit="search(event, 'search')">
